--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:next\" \"npm run dev:electron\"",
     "dev:next": "next dev",
+    "dev:next:turbo": "next dev --turbopack",
     "dev:electron": "node scripts/dev-electron.js",
     "build": "next build",
+    "build:turbo": "next build --turbopack",
     "start": "next start",
     "electron": "electron .",
     "electron:build": "npm run build && electron-builder",
@@ -37,29 +39,30 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.54.1",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/node": "^22.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "concurrently": "^8.0.0",
     "electron": "^28.0.0",
     "electron-builder": "^24.0.0",
-    "eslint": "8.57.1",
-    "eslint-config-next": "15.4.5",
-    "next": "^14.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.5.4",
+    "next": "^15.5.4",
     "playwright": "^1.54.1",
-    "typescript": "^5.0.0",
+    "typescript": "^5.7.0",
     "wait-on": "^7.0.0"
   },
   "dependencies": {
+    "@types/d3": "^7.4.3",
     "autoprefixer": "^10.4.0",
-    "lucide-react": "^0.294.0",
+    "critters": "^0.0.23",
+    "d3": "^7.8.5",
+    "lucide-react": "^0.460.0",
     "postcss": "^8.4.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "recharts": "^3.1.0",
-    "sqlite": "^5.0.1",
-    "sqlite3": "^5.1.6",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.0"
   },
   "build": {
     "appId": "com.lordisk.app",
